# sctc

./: LICENSE  README.md  gene_space.ipynb  pyproject.toml  ranking_marker.ipynb  sctc-example.ipynb  sctc_example.ipynb  toy_model.ipynb
src/sctc/: __init__.py  complexity_index.py  complexity_order.py  gene_space.py  ranking_plot.py
tutorials/: demo.py  example.py  gene_space.ipynb  ranking_marker.ipynb  sctc_example.ipynb  toy_model.ipynb
