[project]
name = "sctc"
version = "0.1.0"
authors = [
  { name="Hai Lin", email="hailin@ucas.ac.cn" },
]
description = "Single-Cell Transcriptional Complexity (SCTC)"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hailinphysics/sctc"
